--- a/index.html
+++ b/index.html
@@ -170,9 +170,10 @@
                     <div class="clinic-card primary-location">
                         <h4>**⭐ Trenton Primary Care Center**</h4>
                         <ul>
+							<li>Closest FPH - Humboldt TN</li>
                             <li>Luis Anderson</li>
                             <li>Wanda Graupman</li>
-                            <li>Kayla Morgan</li>
+                            <li>Kayla Morgan/DOT Certified</li>
                             <li>Kelly Pulley</li>
                             <li>Natalie Sturgeon</li>
                             <li>Sherry Rene Whitby</li>
@@ -225,4 +226,5 @@
     <script src="script.js"></script>
     <script src="lock.js"></script> 
 </body>
+
 </html>
