--- a/providersTrenton.html
+++ b/providersTrenton.html
@@ -44,6 +44,12 @@
                 <p>(103) Wanda Graupman/Katelyn Langston</p>
                 <p>(113) Luis Anderson/Terra Fortner</p>
             </b>
+            <b>
+                <p>Trenton Front Desk:  79444100</p>
+                <p>Trenton Primary Nurse:  79444145</p>
+                <p>Trenton Peds Nurse:  79444144</p>
+                <p>Trenton Referral Team: 79999535</p>
+            </b>
         </center>
         <p>Below is the current list of clinical providers practicing at the Trenton, TN location, including links to their NPI profiles for verification.</p>
 
@@ -105,3 +111,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
