--- a/index.html
+++ b/index.html
@@ -171,14 +171,13 @@
                         <h4>**⭐ Trenton Primary Care Center**</h4>
                         <ul>
 							<li>Closest FPH - Humboldt TN</li>
-                            <li>Luis Anderson</li>
-                            <li>Wanda Graupman</li>
-                            <li>Kayla Morgan/DOT Certified</li>
-                            <li>Kelly Pulley</li>
-                            <li>Natalie Sturgeon</li>
-                            <li>Sherry Rene Whitby</li>
-                            <li>James Williams</li>
-                            <li>Kayla Yates</li>
+                            <li>Luis Anderson 113</li>
+                            <li>Wanda Graupman 103</li>
+                            <li>Kayla Morgan/DOT Certified 116</li>
+                            <li>Kelly Pulley 107</li>
+                            <li>Natalie Sturgeon 114</li>
+                            <li>Sherry Rene Whitby 111</li>
+                            <li>James Williams 115</li>
                         </ul>
                     </div>
                     
@@ -197,7 +196,7 @@
 
         <footer>
             <div class="container">
-                <p>&copy; 2025 Christian Family Medicine & Pediatrics Internal Workbook. Managed by Steven Shturevski</p>
+                <p>&copy; 2026 Christian Family Medicine & Pediatrics Internal Workbook. Managed by Steven Shturevski</p>
             </div>
         </footer>
 
@@ -217,7 +216,7 @@
 
                 <h3 class="mt-20">Current Protocol Status</h3>
                 <p class="status-note status-alert">⚠️ Demo Protocol: Workbook is currently under review. Use with Caution</p>
-                <p class="status-note status-ok">✅ **Price List:** Last updated: 2025-10-1. 3:20PM E.E.T.</p>
+                <p class="status-note status-ok">✅ **Price List:** Last updated: 2026-2-16. 4:14PM E.E.T.</p>
             </div>
         </div>
     
@@ -228,3 +227,4 @@
 </body>
 
 </html>
+
