--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="selfPayPrices.html" class="nav-item">Self Pay</a>
 		    <a href="additionalInfo.html" class="nav-item">Additional Info</a>
 		    <a href="controlPanel.html" class="nav-item">Control Panel</a>
-	            <a href="trentonProviders.html" class="nav-item">Trenton Providers</a>
+	            <a href="providersTrenton.html" class="nav-item">Trenton Providers</a>
                 </nav>
                 <div id="trenton-clock" class="header-clock"></div>
             </div>
@@ -42,7 +42,7 @@
             <section id="hero" class="card hero-section">
                 <h2>Your Central Hub for Important Clinic Information</h2>
                 <p>Welcome to the Christian Family Medicine & Pediatrics Internal Workbook. Use the quick links or directory below to access scheduling protocols, current self-pay pricing, and provider-specific guidelines.</p>
-                <p class="note-important">⚠️ Static Site Notice: To update any information, please inform <b>Steven Shturevski</b>.</p>
+                <p class="note-important">⚠️ Static Site Notice: To update any information, please inform <b>Stefan Shturevski</b>.</p>
             </section>
 
             <hr class="section-divider">
@@ -227,4 +227,5 @@
 </body>
 
 </html>
+
 
