--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                         <h4>**⭐ Trenton Primary Care Center**</h4>
                         <ul>
 							<li>Closest FPH - Humboldt TN</li>
-                            <li>Luis Anderson 113</li>
-                            <li>Wanda Graupman 103</li>
-                            <li>Kayla Morgan/DOT Certified 116</li>
-                            <li>Kelly Pulley 107</li>
-                            <li>Natalie Sturgeon 114</li>
-                            <li>Sherry Rene Whitby 111</li>
-                            <li>James Williams 115</li>
+                            <li>Luis Anderson 113| Ped/MD</li>
+                            <li>Wanda Graupman 103| NP</li>
+                            <li>Kayla Morgan 116| NP</li>
+                            <li>Kelly Pulley 107| NP</li>
+                            <li>Natalie Sturgeon 114| NP</li>
+                            <li>Sherry Rene Whitby 111| NP</li>
+                            <li>James Williams 115| MD</li>
                         </ul>
                     </div>
 
@@ -218,8 +218,8 @@
                 </ul>
 
                 <h3 class="mt-20">Current Protocol Status</h3>
-                <p class="status-note status-alert">⚠️ Demo Protocol: Workbook is currently under review. Use with Caution</p>
-                <p class="status-note status-ok">✅ **Price List:** Last updated: 2026-2-16. 4:14PM E.E.T.</p>
+                <p class="status-note status-alert">⚠️ Demo Protocol: Workbook is currently under review. Use with Caution, always consult with higher up.</p>
+                <p class="status-note status-ok">✅ **Price List:** Last updated: 2026-2-25. 6:42PM (GMT+1)</p>
             </div>
         </div>
     
@@ -230,6 +230,7 @@
 </body>
 
 </html>
+
 
 
 
