--- a/index.html
+++ b/index.html
@@ -213,11 +213,10 @@
                     <li class="separator"></li>
                     <li><h4>External Resources</h4></li>
                     <li><a href="https://fastpacehealth-my.sharepoint.com/personal/hannah_burke_fastpacehealth_com/_layouts/15/onedrive.aspx?ct=1759324548418&or=Teams%DHL&ga=1&id=%2Fpersonal%2Fhannah%5Fburke%5Ffastpacehealth%5Fcom%2FDocuments%2FRHA%2FCFM%20Registration%2Epdf&parent=%2Fpersonal%2Fhannah%5Fburke%5Ffastpacehealth%5Fcom%2FDocuments%2FRHA" target="_blank">RHA PDF</a></li>
-                    <li><a href="mailto:it-support@cfmp.org">IT Support Email</a></li>
-                    <li><a href="#">HR Policy Manual (PDF)</a></li>
+                    <li><a href="mailto:stefan.shturevski@fastpacehealth.com">IT Support Email</a></li>
                 </ul>
 
-                <h3 class="mt-20">Current Protocol Status</h3>
+                <h3 class="mt-20">Current Status</h3>
                 <p class="status-note status-alert">⚠️ Demo Protocol: Workbook is currently under review. Use with Caution, always consult with higher up.</p>
                 <p class="status-note status-ok">✅ **Price List:** Last updated: 2026-2-25. 6:42PM (GMT+1)</p>
             </div>
@@ -230,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
