--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <a href="index.html" class="nav-item active">Home</a>
                     <a href="visitTypes.html" class="nav-item">Visit Types</a>
                     <a href="selfPayPrices.html" class="nav-item">Self Pay</a>
+					<a href="hours.html">Clinic Hours</a>
 		    <a href="additionalInfo.html" class="nav-item">Additional Info</a>
 		    <a href="controlPanel.html" class="nav-item">Control Panel</a>
 	            <a href="providersTrenton.html" class="nav-item">Trenton Providers</a>
@@ -229,6 +230,7 @@
 </body>
 
 </html>
+
 
 
 
