--- a/hours.html
+++ b/hours.html
@@ -64,6 +64,7 @@
         <p>&copy; 2026 Trenton Medical Services. All rights reserved.</p>
     </footer>
 
+   <script src="clinic-hours.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
