--- a/providersTrenton.html
+++ b/providersTrenton.html
@@ -9,16 +9,18 @@
 <body>
     <header>
         <div class="container">
-            <h1>Providers Trenton</h1>
-            <nav>
-                <!-- Updated Navigation Bar -->
-                <a href="index.html">Home</a>
-                <a href="visitTypes.html">Visit Types</a>
-                <a href="selfPayPrices.html">Self Pay Prices</a>
-                <a href="providersTrenton.html" class="active">Providers Trenton</a>
-                <a href="additionalInfo.html">Additional Info</a>
-                <a href="controlPanel.html">Control Panel</a>
-            </nav>
+            <h1>Trenton Internal</h1>
+             <nav class="dropdown-nav">
+                    <button class="menu-button" onclick="toggleMenu()">Menu ☰</button>
+                    <div id="dropdown-content" class="dropdown-content">
+                        <a href="index.html" class="active">Home</a>
+                        <a href="selfPayPrices.html">Self-Pay</a>
+                        <a href="hours.html">Clinic Hours</a>
+                        <a href="visitTypes.html">Visit Types</a>
+                        <a href="additionalInfo.html">Additional Info</a>
+                        <a href="controlPanel.html">Admin Control</a>
+                    </div>
+                </nav>
         </div>
     </header>
 
@@ -111,5 +113,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
