--- a/additionalInfo.html
+++ b/additionalInfo.html
@@ -10,14 +10,18 @@
     <header>
         <div class="container">
             <h1>Internal Scheduling & Provider Guidelines</h1>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="visitTypes.html">Visit Types</a>
-                <a href="selfPayPrices.html">Self Pay Prices</a>
-                <a href="providersTrenton.html">Providers Trenton</a>
-                <a href="additionalInfo.html">Additional Info</a>
-                <a href="controlPanel.html">Control Panel</a>
-            </nav>
+            <nav class="dropdown-nav">
+                    <button class="menu-button" onclick="toggleMenu()">Menu ☰</button>
+                    <div id="dropdown-content" class="dropdown-content">
+                        <a href="index.html" class="active">Home</a>
+                        <a href="selfPayPrices.html">Self-Pay</a>
+                        <a href="hours.html">Clinic Hours</a>
+                        <a href="providersTrenton.html">Trenton Internal</a>
+                        <a href="visitTypes.html">Visit Types</a>
+                        <a href="additionalInfo.html">Additional Info</a>
+                        <a href="controlPanel.html">Admin Control</a>
+                    </div>
+                </nav>
         </div>
     </header>
 
@@ -119,3 +123,4 @@ Telehealth visits should be scheduled at the clinic level so just transfer those
     </footer>
 </body>
 </html>
+
