--- a/providersTrenton.html
+++ b/providersTrenton.html
@@ -11,16 +11,18 @@
         <div class="container">
             <h1>Trenton Internal</h1>
              <nav class="dropdown-nav">
-                    <button class="menu-button" onclick="toggleMenu()">Menu ☰</button>
-                    <div id="dropdown-content" class="dropdown-content">
-                        <a href="index.html" class="active">Home</a>
-                        <a href="selfPayPrices.html">Self-Pay</a>
-                        <a href="hours.html">Clinic Hours</a>
-                        <a href="visitTypes.html">Visit Types</a>
-                        <a href="additionalInfo.html">Additional Info</a>
-                        <a href="controlPanel.html">Admin Control</a>
-                    </div>
-                </nav>
+            <button class="menu-button" onclick="toggleMenu()">Menu ☰</button>
+            
+            <div id="dropdown-content" class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="selfPayPrices.html">Self-Pay</a>
+                <a href="hours.html">Clinic Hours</a>
+                <a href="providersTrenton.html">Trenton Internal</a>
+                <a href="visitTypes.html">Visit Types</a>
+                <a href="additionalInfo.html">Additional Info</a>
+                <a href="controlPanel.html">Admin Control</a>
+            </div>
+        </nav>
         </div>
     </header>
 
@@ -113,6 +115,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
