--- a/additionalInfo.html
+++ b/additionalInfo.html
@@ -121,6 +121,11 @@ Telehealth visits should be scheduled at the clinic level so just transfer those
             <p>&copy; 2025 Workbook - Managed by Steven Shturevski</p>
         </div>
     </footer>
+
+<script src="script.js"></script>
+<script src="lock.js"></script>
+	
 </body>
 </html>
+
 
