--- a/providersTrenton.html
+++ b/providersTrenton.html
@@ -112,9 +112,14 @@
             <p>&copy; 2026 Workbook - Managed by Steven Shturevski</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+ 
+
+<script src="script.js"></script>
+<script src="lock.js"></script>
+    
 </body>
 </html>
+
 
 
 
