--- a/selfPayPrices.html
+++ b/selfPayPrices.html
@@ -325,8 +325,11 @@
     </footer>
     
     <script src="selfPayPricesScript.js"></script>
+    <script src="script.js"></script>
+<script src="lock.js"></script>
     
     </body>
 
 </html>
+
 
