--- a/visitTypes.html
+++ b/visitTypes.html
@@ -208,7 +208,10 @@
     </footer>
 
     <script src="visitTypesScript.js"></script>
+    <script src="script.js"></script>
+<script src="lock.js"></script>
     </body>
 
 </html>
+
 
