--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="additionalInfo.html">Additional Info</a>
                         <a href="controlPanel.html">Admin Control</a>
+                        <a href="training.html">Training</a>
                     </div>
                 </nav>
             </div>
@@ -197,3 +198,4 @@
     <script src="lock.js"></script> 
 </body>
 </html>
+
