--- a/additionalInfo.html
+++ b/additionalInfo.html
@@ -20,6 +20,7 @@
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="additionalInfo.html">Additional Info</a>
                         <a href="controlPanel.html">Admin Control</a>
+						 <a href="training.html">Training</a>
                     </div>
                 </nav>
         </div>
@@ -127,5 +128,6 @@ Telehealth visits should be scheduled at the clinic level so just transfer those
 	
 </body>
 </html>
+
 
 
