--- a/controlPanel.html
+++ b/controlPanel.html
@@ -33,6 +33,7 @@
                         <a href="selfPayPrices.html">Self-Pay</a>
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="controlPanel.html" class="active">Admin Control</a>
+                         <a href="training.html">Training</a>
                     </div>
                 </nav>
             </div>
@@ -106,3 +107,4 @@
     </script>
 </body>
 </html>
+
