--- a/hours.html
+++ b/hours.html
@@ -24,6 +24,7 @@
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="additionalInfo.html">Additional Info</a>
                         <a href="controlPanel.html">Admin Control</a>
+                         <a href="training.html">Training</a>
                     </div>
                 </nav>
         </div>
