--- a/providersTrenton.html
+++ b/providersTrenton.html
@@ -21,6 +21,7 @@
                 <a href="visitTypes.html">Visit Types</a>
                 <a href="additionalInfo.html">Additional Info</a>
                 <a href="controlPanel.html">Admin Control</a>
+                 <a href="training.html">Training</a>
             </div>
         </nav>
         </div>
@@ -119,6 +120,7 @@
     
 </body>
 </html>
+
 
 
 
