--- a/selfPayPrices.html
+++ b/selfPayPrices.html
@@ -20,6 +20,7 @@
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="additionalInfo.html">Additional Info</a>
                         <a href="controlPanel.html">Admin Control</a>
+                         <a href="training.html">Training</a>
                     </div>
                 </nav>
         </div>
@@ -331,5 +332,6 @@
     </body>
 
 </html>
+
 
 
