--- a/training.html
+++ b/training.html
@@ -42,12 +42,12 @@
                 <nav class="dropdown-nav">
                     <button class="menu-button" onclick="toggleMenu()">Menu ☰</button>
                     <div id="dropdown-content" class="dropdown-content">
-                        <a href="index.html">Home</a>
-                        <a href="training.html" class="active">Training Center</a>
+                        <a href="index.html">Home</a>                        
                         <a href="selfPayPrices.html">Self-Pay</a>
                         <a href="visitTypes.html">Visit Types</a>
                         <a href="hours.html">Clinic Hours</a>
                         <a href="additionalInfo.html">Additional Info</a>
+                         <a href="training.html">Training</a>
                     </div>
                 </nav>
             </div>
