--- a/training.html
+++ b/training.html
@@ -61,12 +61,14 @@
             </section>
 
             <section id="mod-1" class="info-card course-section active">
-                <h3>Module 1: Workflow Overview <span class="completed-badge">✓ COMPLETED</span></h3>
-                <div style="background: #000; aspect-ratio: 16/9; margin: 15px 0; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: white;">
-                    <p><i>[Training Video Placeholder]</i></p>
-                </div>
-                <button class="menu-button" onclick="completeModule(1)">Mark Module 1 Complete</button>
-            </section>
+    <h3>Module 1: Workflow Overview <span class="completed-badge">✓ COMPLETED</span></h3>
+    
+    <video width="100%" controls style="border-radius: 8px; margin: 15px 0;">
+        <source src="training.mp4" type="video/mp4">
+    </video>
+
+    <button class="menu-button" onclick="completeModule(1)">Mark Module 1 Complete</button>
+</section>
 
             <section id="mod-2" class="info-card course-section">
                 <h3>Module 2: Ethics & Specifics <span class="completed-badge">✓ COMPLETED</span></h3>
