--- a/training.html
+++ b/training.html
@@ -1121,7 +1121,7 @@
     function finishTraining() {
         const name = document.getElementById('trainee-name').value;
         if(!name) return alert("Validation Required.");
-        window.location.href = `mailto:stefan.shturevski@fastpacehealth.com?subject=TIMED EXAM PASSED: ${name}&body=${name} successfully completed the 10-minute athenaOne Ethics Certification.`;
+        window.location.href = `mailto:jasmina.parevska@taskforcebpo.com?subject=TIMED EXAM PASSED: ${name}&body=${name} successfully completed the 10-minute athenaOne Basic Training`;
     }
 
     window.onload = () => renderFAQ();
